--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -319,6 +319,15 @@ h1 {
     flex-direction: row;
     width: 100%;
     overflow-y: hidden;
+    
+    & p {
+        font-family: Arial, Helvetica, sans-serif;
+        margin-left: auto;
+        margin-right: auto;
+        width: 80%;
+        font-size: 12px;
+        text-align: center;
+    }
 }
 
 .CardCollaborators {
