Last commit, results tab working with data from api

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -90,7 +90,7 @@
 .SectionTabs {
     margin-left: auto;
     margin-right: auto;
-    margin-bottom: 200px;
+    margin-bottom: 150px;
     width: 90%;
     overflow-y: auto;
     flex-grow: 1;
@@ -592,7 +592,7 @@ background-size: cover !important;
     position: absolute;
     bottom: 0;
     right: 0;
-    margin: 0px 5% 30px 0px;
+    margin: 0px 5% 70px 0px;
 }
   
 .fixedDateButton {
@@ -628,3 +628,81 @@ background-size: cover !important;
     }
 
 }
+
+.paretoTables {
+    flex: 1; 
+    margin: 0 1%;
+    color: white;
+    height: 90%;
+    text-align: center;
+    border: 1px solid #FFFFFF;
+}   
+
+.ParetoContainer {
+    display: flex;
+    padding: 0 1%;
+    height: 390px;
+    overflow: hidden;
+}
+
+.ParetoTitles {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 12px !important;
+    font-style: normal;
+    text-align: center
+}
+.ParetoContent {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 10px !important;
+    font-style: normal;
+    font-weight: 600 !important;
+    width: 120px;
+    margin-left: 10px;
+    text-align: left !important;
+}
+.ParetoContentR {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 10px !important;
+    font-style: normal;
+    text-align: right !important;
+}
+
+.ParetoTable {
+    text-align: center;
+    font-family: 'HelveticaNeueLTS';
+    border-collapse: collapse;
+    width: 100%;
+    height: 80%;
+    overflow-y: scroll;
+  }
+  
+  .ParetoTable td {
+    border: 1px #ddd;
+    border-style: solid none;
+    border-width: 1px 0;
+    font-size: 14px;
+    padding-bottom: 4px;
+    padding-top: 4px;
+  }
+  .ParetoTable th {
+    border: 1px #ddd;
+    border-style: solid none;
+    border-width: 1px 0;
+    padding-top: 4px;
+    padding-bottom: 4px;
+  }
+  .ParetoTable tbody tr:hover {background-color:  #70C483; opacity: 0.9; z-index: 9999}
+  
+  .ParetoTable tr {
+    padding: 4px;
+    & th {
+    padding-top: 4px;
+    padding-bottom: 4px;
+    text-align: center;
+    background-color: transparent;
+    color: white;
+    }
+  }
