--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -49,14 +49,26 @@
 
 
 .mainContainer {
-    background-color: black;
+    background-image: url('https://cottagelife.com/wp-content/uploads/2018/08/star_milky_way_background_night_starry_sky_night_sky_space_texture-674008.jpg');
+    //https://img.newatlas.com/earth-from-space-6.jpg?auto=format%2Ccompress&fit=max&q=60&w=1000&s=012017ef5bdb0dca8bc0c38e88b13064'
+    background-size: contain;
     display: flex;
     top:0;
     left: 0; 
     right: 0;
     flex-direction: column;
     min-height: 100vh;
+    z-index: 99999;
     position: absolute;    
+}
+
+.mask {
+    position: absolute;
+    width: 100vw;
+    height: 100% !important;
+    background-color: black;
+    z-index: -9999;
+    opacity: 0.6;
 }
 
  
@@ -67,7 +79,6 @@
     overflow-y: auto;
     flex-grow: 1;
     height: 100%;
-    background-color: black;
 
     & .paragraph  {
         color: white;
@@ -237,7 +248,7 @@
     right: 0;
     height: 300px;
     text-align: center;
-    background-color: black;
+    background-color: transparent;
     color: white;
     
     & p {
@@ -254,7 +265,7 @@
 .SectionFooter {
     width: 100%;
     margin-top: 20px;
-    background-color:black;
+    background-color:transparent;
     & h3 {
         font-family: "HelveticaLT";
         text-align: center;  
@@ -626,11 +637,8 @@ background-size: cover !important;
     display: flex;
     flex-direction: row;
     text-align: center;
-    margin-left: auto;
-    margin-right: auto;
-    align-items: center;
     margin-bottom: 20px;
-    width: 50%;
+    justify-content: center;
 
     & p {
         font-family: 'HelveticaLT';
@@ -641,6 +649,7 @@ background-size: cover !important;
 
 .paretoTables {
     flex: 1; 
+    overflow-y: scroll;
     margin: 0 1%;
     color: white;
     height: 90%;
@@ -690,6 +699,7 @@ background-size: cover !important;
   }
   
   .ParetoTable td {
+    cursor: pointer;
     border: 1px #ddd;
     border-style: solid none;
     border-width: 1px 0;
@@ -745,5 +755,45 @@ background-size: cover !important;
     align-self: center;
     margin-left: auto;
     margin-right: auto;
-    margin: 0px 5% 70px 0px;
+    margin: 70px 5% 70px 0px;
   }
+
+  .TitleFinalResults {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 30px;
+    font-style: normal;
+    text-align: center;
+    border-bottom:1px solid white;
+    align-self: center !important;
+    }
+
+
+
+.ResultsContainer {
+    display: flex;
+    padding: 0 5%;
+    height: 390px;
+    overflow: hidden;
+    
+}
+
+.buttonTabsResults {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 12px;
+    color: white;
+    background-color: #70C483;
+    width: 200px;
+    height: 40px;
+    border-radius: 4px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    bottom: 0;
+    margin-top: 10px;
+    align-self: center
+}
