--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1,3 +1,7 @@
+@font-face {
+    font-family: 'AvertaRegular';
+    src: url('./../assets/fonts/AvertaDemoPECuttedDemo-Regular.otf') format('opentype');
+}
 
 .App {
     background:url('../assets/images/sky3.jpeg');
@@ -91,7 +95,7 @@
 
     & p {
         color: white;
-        font-family: Arial, Helvetica, sans-serif, sans-serif;
+        font-family: AvertaRegular;
         font-size: 16px;
         font-style: normal;
         text-align: center
@@ -119,7 +123,7 @@
 
     & p {
         color: white;
-        font-family: 'HelveticaLT';
+        font-family: AvertaRegular;
         font-size: 16px;
         font-style: normal;
         text-align: center;
@@ -201,11 +205,11 @@
             width: 150px;
             align-self: flex-end;
             & a {
-                font-family: "HelveticaLT";
+                font-family: AvertaRegular;
                 display: block;
                 padding: 2px 7px 2px 7px;
                 text-decoration: none;
-                font-size: 12px;
+                font-size: 14px;
                 color: white;
 
             }
@@ -223,7 +227,7 @@
         list-style: none;
         flex-grow: 1;
         text-align: center;
-        font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+        font-family: AvertaRegular;
         align-self: flex-end;
 
         & a {
@@ -252,7 +256,7 @@
     
     & p {
         color: white;
-        font-family: Arial, Helvetica, sans-serif, sans-serif;
+        font-family: AvertaRegular;
         font-size: 12px;
         font-style: normal;
         text-align: center
@@ -366,11 +370,11 @@
     }
 
     & p {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: AvertaRegular;
         margin-left: auto;
         margin-right: auto;
         width: 80%;
-        font-size: 12px;
+        font-size: 16px;
         text-align: center;
     }
      
@@ -419,7 +423,7 @@ h1 {
     overflow-y: hidden;
     
     & p {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Avenir;
         margin-left: auto;
         margin-right: auto;
         width: 80%;
@@ -454,11 +458,11 @@ h1 {
     }
 
     & p {
-        font-family: Arial, Helvetica, sans-serif;
+        font-family: Avenir;
         margin-left: auto;
         margin-right: auto;
         width: 80%;
-        font-size: 12px;
+        font-size: 14px;
         text-align: center;
     }
 }
