--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -3,7 +3,65 @@
   src: url('./../assets/fonts/AvertaDemoPECuttedDemo-Regular.otf')
     format('opentype');
 }
+.link {
+  color: white;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+.section__hero {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  height: 600px;
+}
+.hero__stargazers {
+  width: 100%;
+  height: 200px;
+  display: flex;
+  color: white;
+  justify-content: center;
+  align-items: center;
+}
+.hero__container {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-self: center;
+  height: 100%;
+  flex-direction: column;
+  color: white;
 
+  & p {
+    width: 50%;
+    color: white;
+    font-size: 14px;
+    font-family: AvertaRegular;
+    display: flex;
+    justify-content: center;
+    text-align: center;
+    align-items: center;
+    margin: 0 auto;
+    padding-top: 20px;
+  }
+}
+.hero__buttons {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: flex-end;
+  height: 100%;
+  margin-bottom: 100px;
+}
+.hero__title {
+  font-size: 24px;
+  color: white;
+  font-family: AvertaRegular;
+  width: 100%;
+  text-align: center;
+}
 .loader {
   position: absolute;
   top: 0px;
@@ -11,7 +69,7 @@
   right: 0px;
   left: 0px;
   width: 100vw;
-  height: 100vh;
+  height: 100%;
   justify-content: center;
   align-items: center;
   background-color: black;
@@ -99,7 +157,60 @@ button {
   z-index: -9999;
   opacity: 0.6;
 }
+.collaborators__container {
+  left: 0;
+  right: 0;
+  width: 100%;
+  overflow-y: auto;
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
 
+  & .paragraph {
+    color: white;
+    text-align: center;
+    font-style: normal;
+    font-family: 'HelveticaLT';
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
+
+  & p {
+    color: white;
+    font-family: AvertaRegular;
+    font-size: 16px;
+    font-style: normal;
+    text-align: center;
+  }
+}
+.mission__container {
+  left: 0;
+  right: 0;
+  width: 100%;
+  overflow-y: auto;
+  flex-grow: 1;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+
+  & .paragraph {
+    color: white;
+    text-align: center;
+    font-style: normal;
+    font-family: 'HelveticaLT';
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
+
+  & p {
+    color: white;
+    font-family: AvertaRegular;
+    font-size: 16px;
+    font-style: normal;
+    text-align: center;
+  }
+}
 .SectionBackground {
   left: 0;
   right: 0;
@@ -126,11 +237,143 @@ button {
   }
 }
 
+.menu__container {
+  width: 200px;
+  display: flex;
+  height: 50px;
+  color: white;
+  text-align: center;
+  align-items: center;
+  justify-content: center;
+  align-items: center;
+}
+.menu__button {
+  display: flex;
+  width: 100%;
+  height: 50px;
+  justify-content: center;
+  align-items: center;
+  border: 1px solid white;
+  background: transparent;
+  color: white;
+  cursor: default;
+  & span {
+    margin-right: 10px;
+  }
+}
+
+.menu__button:hover {
+  background-color: rgba(255, 255, 255, 0.3);
+}
+.menu__items {
+  background-color: #2e3648;
+  display: flex;
+  flex-direction: column;
+  border-radius: 10px;
+  border: 1px solid #4e5865;
+  padding: 10px;
+  margin-top: 10px;
+  overflow: scroll;
+  height: 235px;
+  position: absolute;
+  width: 180px;
+  top: 60px;
+  color: white;
+  margin-top: 20px;
+  z-index: 1000;
+}
+
+.menu__item {
+  display: flex;
+  height: 35px;
+  width: 100%;
+  justify-content: center;
+  align-items: center;
+  padding: 10px 0;
+  cursor: default;
+}
+.menu__item:hover {
+  background-color: rgba(78, 88, 101, 0.3);
+}
+
 .constrain {
   margin: 0 auto;
   max-width: 1400px;
 }
+.moltoit__missioncode {
+  margin-left: auto;
+  margin-right: auto;
+  margin-bottom: 150px;
+  width: 100%;
+  overflow-y: auto;
+  flex-grow: 1;
+  height: 100%;
+  text-align: center;
 
+  & .paragraph {
+    color: white;
+    text-align: center;
+    font-style: normal;
+    font-family: 'HelveticaLT';
+    font-size: 40px;
+    margin-bottom: 0px;
+  }
+
+  & p {
+    color: white;
+    font-family: AvertaRegular;
+    font-size: 16px;
+    font-style: normal;
+    text-align: center;
+  }
+
+  & .Title {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 30px !important;
+    font-style: normal;
+    text-align: center;
+  }
+
+  & .TitleMotor {
+    color: white;
+    font-family: 'HelveticaNeueLTS';
+    font-size: 40px !important;
+    font-weight: 900 !important;
+    font-style: normal;
+    text-align: center;
+  }
+
+  & button {
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    border: none;
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 10px;
+    color: white;
+    background-color: #70c483;
+    width: 250px;
+    height: 40px;
+    border-radius: 4px;
+    align-self: center;
+    margin-left: auto;
+    margin-right: auto;
+    outline: none;
+    margin-bottom: 20px;
+  }
+
+  & input {
+    height: 30px;
+    width: 290px;
+    border-radius: 5px;
+    outline: none;
+    border: none;
+    text-align: center;
+    margin: 20px 0;
+    align-self: center;
+  }
+}
 .SectionTabs {
   margin-left: auto;
   margin-right: auto;
@@ -771,9 +1014,10 @@ h1 {
   border: 1px solid #ffffff;
 }
 .pareto__objectives {
+  position: relative;
   color: white;
   width: 400px;
-  border: 1px solid white;
+  height: 472px;
   overflow-y: scroll;
   overflow-x: hidden;
 }
@@ -788,7 +1032,12 @@ h1 {
   display: flex;
   justify-content: center;
   align-items: center;
-  margin: 30px;
+  position: sticky;
+  bottom: 0px;
+  border: 1px solid white;
+  background: black;
+  padding: 20px;
+
   & button {
     display: flex;
     border: none;
@@ -836,11 +1085,21 @@ h1 {
 }
 
 .ParetoTitles {
+  position: sticky;
+  top: 0px;
+  background: black;
+  z-index: 800;
+  margin: 0;
   color: white;
   font-family: 'HelveticaNeueLTS';
   font-size: 16px !important;
   font-style: normal;
   text-align: center;
+  border: 1px solid white;
+  height: 50px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 .ParetoContent {
   color: white;
@@ -862,6 +1121,7 @@ h1 {
 }
 
 .ParetoTable {
+  border: 1px solid white;
   text-align: center;
   font-family: 'HelveticaNeueLTS';
   border-collapse: collapse;
@@ -936,7 +1196,17 @@ h1 {
   margin: 70px 5% 70px 0px;
 }
 
-.TitleFinalResults {
+.finalresults__container {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  width: 100%;
+  flex-direction: row;
+  margin: 0 auto;
+  margin-bottom: 50px;
+}
+
+.finalresults__title {
   color: white;
   font-family: 'HelveticaNeueLTS';
   font-size: 30px;
@@ -946,6 +1216,48 @@ h1 {
   align-self: center !important;
 }
 
+.finalresults__options {
+  display: flex;
+  flex-direction: column;
+}
+.finalresults__button {
+  margin-left: auto;
+  margin-right: auto;
+  display: block;
+  border: none;
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: white;
+  background-color: #70c483;
+  width: 200px;
+  height: 40px;
+  border-radius: 4px;
+  align-self: center;
+  margin-left: auto;
+  margin-right: auto;
+  bottom: 0;
+  margin-top: 10px;
+  align-self: center;
+  outline: none;
+
+  & a {
+    color: white;
+    width: 100%;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+    height: 100%;
+  }
+}
+.finalresults__image {
+  margin: 20px;
+  display: flex;
+  background-color: transparent;
+  justify-content: center;
+  align-items: center;
+  width: 500px;
+  padding: 20px;
+}
 .ResultsContainer {
   display: flex;
   padding: 0 5%;
@@ -1026,6 +1338,21 @@ h1 {
 }
 
 @media only screen and (max-width: 768px) {
+  .hero__container > p {
+    width: 100%;
+  }
+  .hero__buttoncontainer {
+    display: flex !important;
+  }
+  .finalresults__image {
+    width: 280px;
+    padding: 0px;
+    margin-top: 20px;
+  }
+  .finalresults__container {
+    flex-direction: column-reverse;
+    align-items: center;
+  }
   .pareto__chart {
     width: 280px;
   }
@@ -1279,8 +1606,8 @@ h1 {
       background-color: gray;
       margin-left: auto;
       margin-right: auto;
-      width: 200px;
-      height: 200px;
+      width: 120px;
+      height: 120px;
       margin-bottom: 50px;
     }
 
