Change font in collaborators

--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -1612,7 +1612,7 @@ h1 {
     }
 
     & p {
-      font-family: Avenir;
+      font-family: AvertaRegular;
       margin-left: auto;
       margin-right: auto;
       width: 100%;
