--- a/src/styles/_components.scss
+++ b/src/styles/_components.scss
@@ -63,6 +63,10 @@
   width: 100%;
   text-align: center;
 }
+.fake__div {
+  width: 100%;
+  height: 600px;
+}
 .loader {
   position: absolute;
   top: 0px;
